# spingus

./: Cargo.toml  README.md
benches/: bench_main.rs
benches/benchmarks/: domain.rs  mod.rs  plan.rs  problem.rs
src/: domain.rs  lib.rs  main.rs  problem.rs  sas_plan.rs  shared.rs  term.rs
src/domain/: action.rs  constants.rs  name.rs  parameter.rs  predicate.rs  requirement.rs  types.rs
src/domain/action/: effect.rs  precondition.rs  string_expression.rs
src/plan/: mod.rs
src/problem/: goal.rs  init.rs  mod.rs  object.rs  objects.rs  token.rs
tests/: domain_parsing.rs  problem_parsing.rs
tests/data/child-snack-agile/: domain.pddl
