[package]
name = "spingus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
rstest = "0.18.2"

[dev-dependencies]
test-data = { git = "https://github.com/aibasel/downward-benchmarks.git" }
