[package]
name = "spingus"
version = "0.1.0"
edition = "2021"

[dependencies]
nom = "7.1.3"
logos = "0.13.0"
annotate-snippets = "0.10.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = "0.8.5"
rstest = "0.18.2"

[[bench]]
name = "bench_main"
harness = false
